<resources>
    <string name="app_name">Thin Client G13</string>
    <string name="login_title">Welcome</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button">LOG IN</string>
    <string name="open_office_button">Open Office</string>
    <string name="inkscape_button">Inkscape</string>
    <string name="choose_your_app">Please choose the virtual application that you want to start.</string>
</resources>
